started working on bfs, added basic attributes and getstartendpositions function

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/styles.css">
-    <script src="main.js"></script>
-    <title>something</title>
+    <script src="js/breadth_first_search.js"></script>
+    <script src="js/main.js"></script>
+    <title>Maze</title>
   </head>
   <body>
     <div id="container">
@@ -16,9 +17,9 @@
         
         <div id="menudiv">
         <select id = "algolist" onchange = "algopick()" >  
-          <option> A* </option>  
+          <option> Breadth First Search  </option>  
           <option> Dijkstra </option>  
-          <option> Breadth First Search </option>  
+          <option> A* </option>  
           <option> Depth First Search </option>  
         </select>  
 
