fixed alot of bugs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </select>   
 
         <button id="startbutton"  onclick="start()"> Start</button>
-        </div>
+        <button id="clearbutton"  onclick="clearBoard()"> Clear</button>  
+      </div>
         <div id="board-container">
           <div id="board"></div>
         </div>
